<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bdalumnos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="matricula">Matricula</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="curp">CURP</string>
    <string name="email">E-Mail</string>
    <string name="carrera">Carrera</string>
    <string name="alta">Guardar</string>
    <string name="buscar">Buscar</string>
    <string name="baja">Eliminar</string>
    <string name="modificar">Editar</string>
    <string name="limpiar">Limpiar</string>
    <string name="turno">Turno</string>

</resources>
